<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="login_title">Welcome to Story Universe👋</string>

    <string name="title_welcome">Do you have an account?</string>
    <string name="message_welcome">If you don\'t, click the Signup button.</string>
    <string name="hint_username"> input your username here.</string>
    <string name="hint_email"> input your email here.</string>
    <string name="hint_password"> input your password here.</string>
    <string name="et_password_error_message">Passwords must be at least 8 characters</string>
    <string name="et_email_error_message">Email address is not valid</string>
    <string name="error_username">Can\'t be less than 2 characters</string>
    <string name="error_signup_input">you need to fill in the input first</string>
    <string name="error_login_input">email or password is invalid</string>
    <string name="email_taken">The email you entered is already registered, please change your email.</string>

    <string name="create_account">Create Account</string>
    <string name="user_name">Name: </string>
    <string name="date_created">Date: </string>

    <string name="homepage">Hello People!</string>

    <string name="btn_floating">to create new content</string>
    <string name="no_data">No data found</string>
    <string name="no_image_data">Displayed if no data image</string>
    <string name="error_loading">Load data failed. because of: </string>
    <string name="share_button">Upload Your Story!</string>
    <string name="share_story_as">Share your story as: </string>
    <string name="btn_camera">Use your Camera</string>
    <string name="btn_gallery">Upload from Gallery</string>
    <string name="detail_title">%1$s\'s Story</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="logout">Logout</string>
    <string name="language">Change Language</string>
    <string name="refresh">Refresh</string>

    <string name="post_as">Share your story as:  </string>
    <string name="post_users">Make your own story</string>
    <string name="message">Message  :</string>

    <string name="warning_add_image">You need to upload photo first</string>
    <string name="warning_add_desc">You need to add description first</string>
    <string name="logout_success">Logout Success</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="logout_cancel">Cancel</string>
    <string name="hello_welcome">You can click on each list that has been uploaded by the user. Remember, the more and favorite icons are just decorations.</string>
    <string name="btn_understand">I Understand!</string>

    <string name="name_empty">Name Is Empty</string>
    <string name="email_empty">Email Is Empty</string>
    <string name="password_empty">Fill The Password</string>

    <string name="package_name">com.example.storyapp</string>

    <string name="use_current_location">Use my current location</string>
    <string name="use_pick_location">Use the location I\'ve selected</string>
    <string name="pick_location_hint">Hint: Click map to pick your location</string>
    <string name="icon_map_pin">Icon map pin</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="start_point">Start Point</string>
    <string name="account_created">Your account has successfully created</string>
    <string name="retry">Try Again</string>
    <string name="locatiob_not_found">Location is not found. Try Again</string>

    <string name="use_this_location">Use this location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Look at map</string>

    <string name="signup_title">Let\'s create an account!</string>
    <string name="signup_message">New to this application? \nLet\'s create an account for you ✨</string>
    <string name="login_message">You can view stories from Dicoding users through our app! 📝</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>

</resources>