...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_stories"
            style="@style/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/item_story" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
